// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calls selectionDidChange function 1`] = `
<div
  className="dropdown"
  style={
    Object {
      "background": "#61dafb",
      "position": "left",
      "width": "200px",
    }
  }
>
  <div
    className="button"
    onClick={[Function]}
  >
    Liverpool
  </div>
</div>
`;

exports[`Calls selectionDidChange function 2`] = `
<div
  className="dropdown"
  style={
    Object {
      "background": "#61dafb",
      "position": "left",
      "width": "200px",
    }
  }
>
  <div
    className="button"
    onClick={[Function]}
  >
    Bristol
  </div>
</div>
`;

exports[`Calls selectionDidChange function 3`] = `
<div
  className="dropdown"
  style={
    Object {
      "background": "#61dafb",
      "position": "left",
      "width": "200px",
    }
  }
>
  <div
    className="button"
    onClick={[Function]}
  >
    Manchester
  </div>
</div>
`;

exports[`it renders with displaymenu 1`] = `
<div
  className="dropdown"
  style={
    Object {
      "background": "#61dafb",
      "position": "left",
      "width": "200px",
    }
  }
>
  <div
    className="button"
    onClick={[Function]}
  >
    Location
  </div>
  <ul>
    <li
      data-id="Liverpool"
      onClick={[Function]}
    >
      Liverpool
    </li>
    <li
      data-id="Bristol"
      onClick={[Function]}
    >
      Bristol
    </li>
    <li
      data-id="Manchester"
      onClick={[Function]}
    >
      Manchester
    </li>
  </ul>
</div>
`;

exports[`it renders without displaymenu 1`] = `
<div
  className="dropdown"
  style={
    Object {
      "background": "#61dafb",
      "position": "left",
      "width": "200px",
    }
  }
>
  <div
    className="button"
    onClick={[Function]}
  >
    Location
  </div>
</div>
`;
